--- a/wp-content/themes/storevilla/style.css
+++ b/wp-content/themes/storevilla/style.css
@@ -563,6 +563,25 @@ a:active {
     transition: all 300ms ease-in-out 0s;
     -webkit-transition: all 300ms ease-in-out 0s;
 }
+.webzine .main-navigation li.current-category-ancestor > a,
+.webzine .main-navigation li.current-menu-ancestor > a,
+.webzine #primary-menu >li>a:hover,
+.webzine .main-navigation li.menu-item-has-children > a:hover:before,
+.webzine .main-navigation ul li.current-menu-item > a,
+.webzine .main-navigation ul li.current-post-ancestor > a,
+.webzine .main-navigation ul li a:hover,
+.webzine .main-navigation ul ul li.current-menu-item a,
+.webzine .main-navigation ul ul li a:hover,
+.webzine #secondaryleft ul.sub-menu li.current-menu-item a,
+.webzine #secondaryleft ul.sub-menu li.current-menu-parent a,
+.webzine #secondaryleft ul.sub-menu li a:hover,
+.webzine .sv_search_form input[type="text"]:focus
+ {
+  color:#3ea6fe;
+}
+.webzine #secondaryleft .widget_nav_menu h3:after {
+  background:#3ea6fe;
+}
 /*
 ======== drop down menu =======
 */
