--- a/wp-content/themes/storevilla/css/responsive.css
+++ b/wp-content/themes/storevilla/css/responsive.css
@@ -1,14 +1,12 @@
 @media (max-width: 1190px) {
-	.store-container {
-		padding: 0 10px;
-	}
+
 }
 @media (max-width: 1170px) {
 	body {
 		overflow-x: hidden;
 	}
 	.store-container {
-		padding: 0 10px;
+		/*padding: 0 10px;*/
 	}
 	.top-header .store-container {
 		padding: 0 30px 0 10px;
@@ -18,7 +16,7 @@
 	}
 }
 @media (max-width: 1110px) {
-	.widget_storevilla_latest_product_cat_widget_area .latest-product-slider li, 
+	.widget_storevilla_latest_product_cat_widget_area .latest-product-slider li,
 	.widget_storevilla_product_widget_area .store-product li,
 	.widget_storevilla_cat_with_product_widget_area .product-cat-slide ul.cat-with-product li {
 		padding-left: 16px;
@@ -57,7 +55,7 @@
 		margin-bottom: 5px;
 		width: 130px;
 	}
-	.product-button-wrap a.button::before, 
+	.product-button-wrap a.button::before,
 	.product-button-wrap a.added_to_cart::before {
 		left: 23px;
 	}
@@ -80,9 +78,9 @@
 		float: left;
 		width: 100%;
 	}
-	.site-footer .footer-widgets .footer-widget-2, 
-	.site-footer .footer-widgets .footer-widget-3, 
-	.site-footer .footer-widgets .footer-widget-4, 
+	.site-footer .footer-widgets .footer-widget-2,
+	.site-footer .footer-widgets .footer-widget-3,
+	.site-footer .footer-widgets .footer-widget-4,
 	.site-footer .footer-widgets .footer-widget-5 {
 		float: left;
 		margin-right: 3%;
@@ -96,7 +94,7 @@
 	.our-features-box .feature-box {
 		text-align: center;
 	}
-	.our-features-box .feature-box span, 
+	.our-features-box .feature-box span,
 	.our-features-box .feature-box .content {
 		display: block;
 	}
@@ -118,11 +116,11 @@
 	}
 }
 @media (max-width: 800px) {
-	.widget_storevilla_latest_product_cat_widget_area .latest-product-slider li .item-img a.product-image img, 
-	.widget_storevilla_product_widget_area .store-product li .item-img a.product-image img, 
+	.widget_storevilla_latest_product_cat_widget_area .latest-product-slider li .item-img a.product-image img,
+	.widget_storevilla_product_widget_area .store-product li .item-img a.product-image img,
 	.widget_storevilla_cat_with_product_widget_area .product-cat-slide li .item-img a.product-image img {
 		width: 100%;
-	}	
+	}
 }
 @media (min-width: 769px) {
 	.main-navigation ul {
@@ -162,9 +160,9 @@
 	.widget_storevilla_cat_with_product_widget_area .product-cat-slide li .item-img a.product-image {
 		width: 100%;
 	}
-	.site-footer .footer-widgets .footer-widget-2, 
-	.site-footer .footer-widgets .footer-widget-3, 
-	.site-footer .footer-widgets .footer-widget-4, 
+	.site-footer .footer-widgets .footer-widget-2,
+	.site-footer .footer-widgets .footer-widget-3,
+	.site-footer .footer-widgets .footer-widget-4,
 	.site-footer .footer-widgets .footer-widget-5 {
 		width: 100%;
 	}
@@ -178,7 +176,7 @@
 	.header-wrap .site-branding {
 		margin-bottom: 10px;
 	}
-	.header-wrap .search-cart-wrap .advance-search, 
+	.header-wrap .search-cart-wrap .advance-search,
 	.header-wrap .search-cart-wrap .site-header-cart {
 		float: none;
 		display: inline-block;
@@ -217,14 +215,13 @@
 		width: 30px;
 	}
 	.main-navigation .menu-toggle > span {
-		background: #fff none repeat scroll 0 0;
+		background: #f06363; none repeat scroll 0 0;
 		bottom: 0;
 		display: block;
 		height: 3px;
 		left: 0;
 		margin: auto;
 		position: absolute;
-		right: 0;
 		top: 0;
 		transition: all 0.3s ease 0s;
 		width: 100%;
@@ -232,7 +229,7 @@
 	}
 	.main-navigation .menu-toggle > span:before,
 	.main-navigation .menu-toggle > span:after {
-		background-color: #fff;
+		background-color: #f06363;
 		content: "";
 		height: 3px;
 		left: 0;
@@ -249,10 +246,7 @@
 	.main-navigation .menu-toggle > span:after {
 		bottom: -8px;
 	}
-	.main-navigation ul li.current-menu-item a, 
-	.main-navigation ul li a:hover {
-		color: #fff;
-	}
+
 	.main-navigation li.menu-item-has-children::before {
 		color: #0091D5;
 		line-height: 34px;
@@ -298,7 +292,7 @@
 		display: inline-block;
 		float: none;
 	}
-	/*inner pages*/ 
+	/*inner pages*/
 	.rightsidebar #primary {
 		width: 100%;
 		float: none;
@@ -325,7 +319,7 @@
 		text-align: center;
 	}
 	.status-publish .actions .coupon .input-text {
-		width: 100% !important; 
+		width: 100% !important;
 		margin-bottom: 10px !important;
 	}
 	.status-publish .actions .button {
@@ -391,10 +385,163 @@
 	#primary .site-main {
 		padding-bottom: 15px;
 	}
-
 }
 @media (max-width: 600px) {
-	.widget_storevilla_promo_pages_area .store-container .promo-area, 
+
+	.woocommerce #reviews #review_form_wrapper, .comments-area {
+		padding:15px 20px 10px;
+	}
+.woocommerce #review_form #respond .comment-form {
+	padding:90px 10px 20px;
+	margin:0;
+}
+.woocommerce .woocommerce-tabs .comment-form-rating .stars {
+	line-height:25px;
+}
+.woocommerce-tabs .comment-respond .comment-form-rating label {
+	margin-bottom:5px;
+}
+
+.woocommerce-tabs .comment-respond .comment-form-comment {
+	float:none;
+	width:100%;
+}
+.woocommerce-tabs .comment-respond .form-submit {
+	width:120px;
+}
+.woocommerce #respond input#submit {
+	margin-top:-10px;
+	height:40px;
+}
+.related.products ul.products {
+	padding:20px 15px 0;
+}
+.product-button-wrap a.villa-details:before {
+	content:'';
+}
+.main-navigation {
+	float:none;
+	text-align:left;
+	margin:0;
+	position:absolute;
+	top:0;
+	z-index;999;
+}
+.home .main-navigation #primary-menu {
+	text-align:left;
+}
+.main-navigation ul {
+	left:0;
+	width:300px;
+	padding:10px 0 15px;
+}
+#primary-menu >li>a {
+	padding:15px 30px 5px;
+}
+.main-navigation .sub-menu {
+	position:static;
+	visibility: visible;
+	opacity: 1;
+	border:none;
+	box-shadow: none;
+	background:none;
+	padding:0 0 0 20px;
+	width:100%;
+}
+.top-navigation {
+	text-align:right;
+}
+.site-content .store-villa-banner {
+	width:100%;
+	float:none;
+}
+.banner_letter .main-widget-wrap {
+	float:none;
+	margin:0 auto;;
+	width:90%;
+	padding:10px 0 0;
+}
+a.woocommerce-main-image {
+	width:100%;
+}
+.w_group {
+	padding:20px;
+}
+.w_child .wall-column, .w_child article {
+	width:100%;
+	float:none;
+}
+.w_view {padding:20px;}
+.w_view > h2 {
+	font-size:22px;
+	line-height:1.4;
+	margin:50px auto;
+}
+.comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous,.comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next {
+	float:none;
+	width:100%;
+}
+.w_header_cat {
+	display:none;
+}
+.comments-area {
+	padding:15px 20px !important;
+}
+.comments-area .form-submit {
+	float:right;
+	width:80px;
+}
+.comments-area .comment-form-comment {
+	width:100%;
+}
+.comments-area .form-submit input#submit {
+	height:50px;
+	font-size:14px;
+}
+#xbreadcrumb .woocommerce-breadcrumb {
+	margin-left:15px;
+}
+.related.products ul.products {
+	margin:0;
+}
+	.woocommerce div.product .woocommerce-tabs .panel.entry-content {
+		padding:30px 20px;
+	}
+	.woocommerce #reviews #comments {
+		padding:20px;
+
+	}
+	.woocommerce #main div.product div.summary {width:100%}
+	.foot-navigation {padding:20px;}
+
+.site-footer .site-info {background:none;}
+	.leftsidebar #secondaryleft {
+		float:none;
+		width:100%;
+		max-width:none;
+		padding:53px 20px 30px;
+	}
+
+	#primary {
+		float:none;
+		width:100%;
+		padding:30px 20px 30px;
+		max-width:none;
+	}
+
+
+.woocommerce #reviews #comments ol.commentlist li {
+	margin:0;
+
+}
+.woocommerce #reviews #comments ol.commentlist li img.avatar {
+	display:none;
+}
+.woocommerce #reviews #comments ol.commentlist li .comment-text {
+	margin:0 0 10px 0;
+	padding:15px;
+}
+	.widget_storevilla_promo_pages_area .store-container .promo-area,
 	.widget_storevilla_blog_widget_area .blog-preview {
 		width: 100%;
 		margin-bottom:20px;
@@ -406,10 +553,10 @@
 		display: inline-block;
 		float: none;
 	}
-	.widget_storevilla_promo_pages_area .store-container .promo-area.promo-two, 
+	.widget_storevilla_promo_pages_area .store-container .promo-area.promo-two,
 	.widget_storevilla_blog_widget_area .large-blog-preview {
 		width: 100%;
-		margin: 0; 
+		margin: 0;
 	}
 	.widget_storevilla_promo_pages_area .store-container .promo-area.promo-two .promo-image {
 		width: 100% !important;
@@ -437,7 +584,7 @@
 	}
 	.site-footer .payment-accept {
 		float: none;
-		padding: 0 0 10px; 
+		padding: 0 0 10px;
 	}
 	.widget_storevilla_aboutus_info_area .about-logo {
 		width: 200px;
@@ -461,10 +608,8 @@
 	.brand-logo-wrap {
 		padding: 40px 0 0;
 	}
-	.main-navigation ul {
-		width: 97%;
-	}
-	.woocommerce-page.columns-3 ul.products li.product, 
+
+	.woocommerce-page.columns-3 ul.products li.product,
 	.woocommerce.columns-3 ul.products li.product {
 		width: 100%;
 		margin-left: 0;
@@ -496,12 +641,9 @@
 	.widget_storevilla_cat_with_product_widget_area .product-cat-slide .home-block-inner {
 		height: 370px;
 	}
-	.main-navigation ul {
-		width: 96%;
-	}
-	.woocommerce ul.products li.product, 
-	.woocommerce-page ul.products li.product, 
-	.woocommerce-page[class*="columns-"] ul.products li.product, 
+	.woocommerce ul.products li.product,
+	.woocommerce-page ul.products li.product,
+	.woocommerce-page[class*="columns-"] ul.products li.product,
 	.woocommerce[class*="columns-"] ul.products li.product {
 		width: 100%;
 	}
@@ -510,7 +652,7 @@
 	}
 }
 @media (max-width: 380px) {
-	.woocommerce-page.columns-3 ul.products li.product, 
+	.woocommerce-page.columns-3 ul.products li.product,
 	.woocommerce.columns-3 ul.products li.product {
 		width: 100%;
 	}
