--- a/wp-content/themes/storevilla/style.css
+++ b/wp-content/themes/storevilla/style.css
@@ -47,7 +47,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 html {
     font-family: sans-serif;
@@ -2012,11 +2012,12 @@ ul.add-to-links {
 ul.add-to-links li {
     display: block;
     text-align:center;
-    width:36%;
+    width:38%;
     float: left;
     margin: 0;
     border-left:1px solid #eee;
 }
+ul.add-to-links li:nth-child(2) {width:34%;}
 ul.add-to-links li:first-child {width:28%;border-left:none;}
 ul.add-to-links li a, ul.add-to-links li a.button {
     height:36px;
@@ -2195,8 +2196,8 @@ product-button-wrap and button css
     content: '\f07a';
     position: absolute;
     font-family: FontAwesome;
-    left: 18px;
-    top: 8px;
+    left: 14px;
+    top: 9px;
     font-size: 13px;
 }
 @-moz-document url-prefix() {
@@ -5105,4 +5106,7 @@ button.product_type_external css
 }
 .w_view + .post-navigation {
   margin:0 !important;
+}
+#wpstats {
+	display: none;
 }
